--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>JS + CSS Clock</title>
-  <link rel="icon" href="https://fav.farm/🔥" />
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon\apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon\favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon\favicon-16x16.png">
+  <link rel="manifest" href="favicon\site.webmanifest"> 
 </head>
 <body>
 
@@ -63,12 +66,39 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.26, 1.9, 0.58, 1);
     }
 
   </style>
+    
 
   <script>
 
+    const secondHand = document.querySelector('.second-hand');
+    const minsHand = document.querySelector('.min-hand');
+    const hourHand = document.querySelector('.hour-hand');
+
+
+    function setDate() {
+      const now = new Date();
+
+      const seconds = now.getSeconds();
+      const secondsDegrees = ((seconds / 60) * 360) + 90;
+      secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+      
+      const mins = now.getMinutes();
+      const minsDegrees = ((mins / 60) * 360) + 90;
+      minsHand.style.transform = `rotate(${minsDegrees}deg)`;
+
+      const hour = now.getMinutes();
+      const hourDegrees = ((hour / 12) * 360) + 90;
+      hourHand.style.transform = `rotate(${hourDegrees}deg)`;
+    }
+
+  setInterval(setDate, 1000);
 
   </script>
 </body>
