--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Array Cardio 💪</title>
-  <link rel="icon" href="https://fav.farm/🔥" />
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon\apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon\favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon\favicon-16x16.png">
+  <link rel="manifest" href="favicon\site.webmanifest"> 
 </head>
 <body>
   <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
